# examen_bentoml

./: .gitignore  README.md  bentofile.yaml  dvc.yaml  pyproject.toml  test_api.py
.dvc/: config
data/processed/: .gitignore
data/raw/: admission.csv.dvc
models/: .gitignore
notebooks/: data-analysis.ipynb
src/: grid_search.py  prepare_data.py  service.py  train_model.py
